--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "test-publish-my-package"
-version = "0.0.5"
+version = "0.0.6"
 description = "Add your description here"
 authors = [
     { name = "smitk85143", email = "smitk85143@gmail.com" }
@@ -8,7 +8,7 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.7"
 dependencies = []
-repository = "https://github.com/smitk85143/test-publish-my-package"
+urls = { "Homepage" = "https://github.com/smitk85143/microsoft-store-scraper" }
 
 [build-system]
 requires = ["hatchling"]
